force-app/main/default/objects/Claim_Line__c/Claim_Line__c.object-meta.xml
<CustomObject>
    <label>Claim Line</label>
    <pluralLabel>Claim Lines</pluralLabel>
    <nameField>
        <label>Claim Line Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Line items for distributor claims containing product-level claim details</description>
</CustomObject>