force-app/main/default/objects/Claim_Line__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <type>MasterDetail</type>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim Lines</relationshipLabel>
    <relationshipName>Claim_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>