force-app/main/default/objects/Claim_Line__c/fields/Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference__c</fullName>
    <label>Invoice Reference</label>
    <type>Text</type>
    <length>100</length>
</CustomField>