force-app/main/default/objects/Claim_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Claim Lines</relationshipLabel>
    <relationshipName>Claim_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>